[tool.poetry]
name = "takanoy-acme-project"
version = "1.0.0"
description = ""
authors = ["Yuto Takano <takanoy@student.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.10.7"
cryptography = "^38.0.3"
dnslib = "^0.9.23"
requests = "^2.28.1"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true

[tool.black]
line-length = 88
include = ".*pyi?$"
target-version = ["py38"]
